Anpassung Spiel und Darkmode

--- a/datatables.html
+++ b/datatables.html
@@ -11,6 +11,7 @@
           <title>DataTables Beispiel</title> <!-- Titel des HTML-Dokuments -->
           <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- jQuery-Einbindung-->
           <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script> <!-- dataTables Einbindung -->
+          <script defer src="./js/datatables.js"></script> <!-- Deferiertes Einbinden eines JavaScript-Skripts -->
    
 </head>
 <body>
@@ -28,6 +29,9 @@
               <li><a href="forum.html">Forum</a></li>
               <li><a href="datatables.html"> DataTables</a> </li>
               <li id="about"><a href="about.html">Über uns</a></li>
+
+              <!-- Button für Dark/Light Mode -->
+              <button id="mode-switch">Dunkel</button>
             </ul>
         </div>
       </nav>
