--- a/impressum.html
+++ b/impressum.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Einstellungen für responsive Darstellung auf verschiedenen Geräten -->
         <link rel="stylesheet" href="./css/styles.css"> <!-- Verweis auf externe CSS-Datei für die Gestaltung -->
         <title>M10: Webtechnologie</title> <!-- Titel des HTML-Dokuments -->
-        <script defer src=" "></script> <!-- Leerer Verweis auf eine JavaScript-Datei mit defer-Attribut -->
+        <script defer src="./js/impressum.js"></script> <!-- Leerer Verweis auf eine JavaScript-Datei mit defer-Attribut -->
     </head>
 
     <body>
@@ -29,6 +29,9 @@
                 <li><a href="forum.html">Forum</a></li>
                 <li><a href="datatables.html"> DataTables</a> </li> <!-- Navigationslink zur DataTables-Seite -->
                 <li id="about"><a href="about.html">Über uns</a></li>
+
+                <!-- Button für Dark/Light Mode -->
+                <button id="mode-switch">Dunkel</button>
               </ul>
           </div>
         </nav>
