--- a/shop.html
+++ b/shop.html
@@ -27,6 +27,9 @@
                 <li><a href="forum.html">Forum</a></li>
                 <li><a href="datatables.html"> DataTables</a> </li> <!-- Navigationslink zur DataTables-Seite -->
                 <li id="about"><a href="about.html">Über uns</a></li>
+
+                <!-- Button für Dark/Light Mode -->
+                <button id="mode-switch">Dunkel</button>
               </ul>
           </div>
         </nav>
