--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Einstellungen für die Darstellung auf verschiedenen Geräten -->
         <link rel="stylesheet" href="./css/styles.css"> <!-- Verknüpfung mit externem Stylesheet -->
         <title>M10: Webtechnologie</title> <!-- Titel des HTML-Dokuments -->
-        <script defer src=" "></script> <!-- Deferiertes Einbinden eines JavaScript-Skripts -->
+        <script defer src="./js/about.js"></script> <!-- Deferiertes Einbinden eines JavaScript-Skripts -->
     </head>
 
     <body>
@@ -22,6 +22,9 @@
                 <li><a href="forum.html">Forum</a></li> <!-- Navigationslink zur Forum-Seite -->
                 <li><a href="datatables.html"> DataTables</a></li> <!-- Navigationslink zur DataTables-Seite -->
                 <li id="about"><a class="active" href="about.html">Über uns</a></li> <!-- Aktiver Navigationslink zur Über-uns-Seite -->
+
+                <!-- Button für Dark/Light Mode -->
+                <button id="mode-switch">Dunkel</button>
               </ul>
           </div>
         </nav>
