--- a/datatables.html
+++ b/datatables.html
@@ -22,12 +22,12 @@
         <div>  <!-- Container für den Navigationsbereich -->
             <ul>
               <!-- Ungeordnete Liste für Navigationspunkte -->
-              <li><a class="active" href="home.html">Home</a></li>
+              <li><a href="home.html">Home</a></li>
               <li><a href="game.html">Spiel</a></li>
               <li><a href="shop.html">Online-Shop</a></li>
               <li><a href="social-media.html">Social Media</a></li>
               <li><a href="forum.html">Forum</a></li>
-              <li><a href="datatables.html"> DataTables</a> </li>
+              <li><a class="active" href="datatables.html"> DataTables</a> </li>
               <li id="about"><a href="about.html">Über uns</a></li>
 
               <!-- Button für Dark/Light Mode -->
