--- a/forum.html
+++ b/forum.html
@@ -62,7 +62,7 @@
 
           <div class="input-area">
             <!-- Bereich für die Eingabe neuer Beiträge -->
-              <label for="nameInput">Dein Name:</label>
+              <label for="nameInput"></label>
               <input type="text" id="nameInput" placeholder="Dein Name">
               <textarea id="postInput" placeholder="Schreibe deinen Beitrag..."></textarea>
               <button id="addPostBtn">Beitrag hinzufügen</button>
